--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "main": "src/server.ts",
   "scripts": {
     "dev":  "nodemon src/server.ts",
-    "build": "rm -rf build/ && prettier --write src/ && tsc"
+    "build": "rm -rf build/ && tsc"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
