--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "main": "src/server.ts",
   "scripts": {
-    "dev":  "nodemon src/server.ts",
+    "dev": "nodemon src/server.ts",
     "build": "rm -rf build/ && tsc"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.14",
     "@types/morgan": "^1.9.3",
-    "axios": "^0.27.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^4.10.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
