--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -1,4 +1,6 @@
 FROM sitespeedio/node:ubuntu-18.04-nodejs10.15.3
+FROM mysql:5.7
+ADD sql/main.sql /docker-entrypoint-initdb.d
 
 ENV NODE_PORT 3000
 
