--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -1,6 +1,4 @@
 FROM sitespeedio/node:ubuntu-18.04-nodejs10.15.3
-FROM mysql:5.7
-ADD sql/main.sql /docker-entrypoint-initdb.d
 
 ENV NODE_PORT 3000
 
@@ -8,5 +6,10 @@ COPY package.json .
 
 RUN npm install
 
-COPY sql/main.sql .
+COPY src src
+
+COPY sql/init.sql .
 COPY app.js .
+
+EXPOSE 3000
+EXPOSE 3306
