--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,11 @@ services:
       - database
   database:
     image: mysql:8.0
-    command: --init-file /sql/main.sql
+    command: --init-file /sql/init.sql
+    expose:
+      - "3306"
     volumes:
-      - ./main.sql:/sql/main.sql
+      - ./init.sql:/sql/init.sql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
